--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -22,7 +22,6 @@
     <string name="old_games">Anciennes parties</string>
     <string name="combinations">Combinaisons</string>
     <string name="green_book_en">Livre vert</string>
-    <string name="contact">Contact</string>
     <string name="press_again_to_exit">Appuyer de nouveau pour quitter</string>
     <string name="theres_no_games_yet_start_one">Il n\'y a pas encore de jeu.\nEn commencer un</string>
     <string name="best_hand">Meilleure main</string>
@@ -223,4 +222,8 @@
     <!--    <string name="penalties">Pénalités</string>-->
     <!--    <string name="rounds_dont_count_penalties">Les totaux des tours ne tiennent pas compte des pénalités</string>-->
     <!--    <string name="partials">Partiels</string>-->
+
+    <!--  Translations V2.3.0  -->
+    <string name="contact_mahjong_madrid">Contacter Mahjong Madrid</string>
+    <string name="contact_app_support">Contacter l\'assistance de l\'app</string>
 </resources>
