--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -226,4 +226,7 @@
     <!--  Translations V2.2.1  -->
     <string name="contact_mahjong_madrid">Contactar Mahjong Madrid</string>
     <string name="contact_app_support">Contactar soporte app</string>
+
+    <!--  Translations V2.3.0  -->
+    <string name="import_game">Importar partida</string>
 </resources>
