--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -226,4 +226,7 @@
     <!--  Translations V2.2.1  -->
     <string name="contact_mahjong_madrid">Contacter Mahjong Madrid</string>
     <string name="contact_app_support">Contacter l\'assistance de l\'app</string>
+
+    <!--  Translations V2.3.0  -->
+    <string name="import_game">Importer un jeu</string>
 </resources>
