--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -226,4 +226,7 @@
     <!--  Translations V2.2.1  -->
     <string name="contact_mahjong_madrid">联系马德里麻将</string>
     <string name="contact_app_support">联系应用程序支持</string>
+
+    <!--  Translations V2.3.0  -->
+    <string name="import_game">导入游戏</string>
 </resources>
