--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -229,4 +229,7 @@
     <!--  Translations V2.2.1  -->
     <string name="contact_mahjong_madrid">Contact Mahjong Madrid</string>
     <string name="contact_app_support">Contact app support</string>
+
+    <!--  Translations V2.3.0  -->
+    <string name="import_game">Import game</string>
 </resources>
