--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -229,4 +229,11 @@
     <!--  Translations V2.3.0  -->
     <string name="import_games">Games importeren</string>
     <string name="importable">Importeerbaar (alle spelgegevens)</string>
+    <string name="language">Taal</string>
+    <string name="choose_language">Kies taal:</string>
+    <string name="chinese">🇨🇳Chinees</string>
+    <string name="dutch">🇳🇱Nederlands</string>
+    <string name="french">🇫🇷Frans</string>
+    <string name="english">🇬🇧Engels</string>
+    <string name="spanish">🇪🇸Spaans</string>
 </resources>
