--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -233,7 +233,7 @@
     <string name="choose_language">选择语言:</string>
     <string name="chinese">🇨🇳中文</string>
     <string name="dutch">🇳🇱荷兰语</string>
+    <string name="english">🇬🇧英语 (默认)</string>
     <string name="french">🇫🇷法语</string>
-    <string name="english">🇬🇧英语</string>
     <string name="spanish">🇪🇸西班牙语</string>
 </resources>
