--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -236,4 +236,7 @@
     <string name="english">🇬🇧Anglais (par défaut)</string>
     <string name="french">🇫🇷Français</string>
     <string name="spanish">🇪🇸Espagnol</string>
+
+    <!--  Translations V2.4.0  -->
+    <string name="current_game">Partie en cours</string>
 </resources>
