--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -23,7 +23,7 @@
     <string name="combinations">Combinaisons</string>
     <string name="green_book_en">Livre vert</string>
     <string name="press_again_to_exit">Appuyer de nouveau pour quitter</string>
-    <string name="theres_no_games_yet_start_one">Il n\'y a pas encore de jeu.\nEn commencer un</string>
+    <string name="there_arent_games_yet_start_one">Il n\'y a pas encore de jeu.\nEn commencer un</string>
     <string name="best_hand">Meilleure main</string>
     <string name="rounds">Manches</string>
     <string name="delete">Supprimer</string>
@@ -239,4 +239,5 @@
 
     <!--  Translations V2.4.0  -->
     <string name="current_game">Partie en cours</string>
+    <string name="there_arent_combinations_try_new_search">Il n\'y a pas de combinaisons selon ce critère, essayez un autre.</string>
 </resources>
