--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -23,7 +23,7 @@
     <string name="combinations">番种表</string>
     <string name="green_book_en">绿皮书 (英语 PDF)</string>
     <string name="press_again_to_exit">再次按下退出</string>
-    <string name="theres_no_games_yet_start_one">尚无记录。\n开始新游戏</string>
+    <string name="there_arent_games_yet_start_one">尚无记录。\n开始新游戏</string>
     <string name="best_hand">最好手牌</string>
     <string name="rounds">圈数</string>
     <string name="delete">删除</string>
@@ -239,4 +239,5 @@
 
     <!--  Translations V2.4.0  -->
     <string name="current_game">当前游戏</string>
+    <string name="there_arent_combinations_try_new_search">在此标准下没有组合，请尝试其他标准。</string>
 </resources>
