--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="combinations">Combinations</string>
     <string name="green_book_en">Green Book (English PDF)</string>
     <string name="press_again_to_exit">Press again to exit</string>
-    <string name="theres_no_games_yet_start_one">There aren\'t games yet.\nStart one!</string>
+    <string name="there_arent_games_yet_start_one">There aren\'t games yet.\nStart one!</string>
     <string name="best_hand">Best hand</string>
     <string name="rounds">Rounds</string>
     <string name="delete">Delete</string>
@@ -241,4 +241,5 @@
 
     <!--  Translations V2.4.0  -->
     <string name="current_game">Current game</string>
+    <string name="there_arent_combinations_try_new_search">There are no combinations under this criterion, try a different one.</string>
 </resources>
