Fixed error handling

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -239,4 +239,5 @@
 
     <!--  Translations V2.4.0  -->
     <string name="there_arent_combinations_try_new_search">No hay combinaciones bajo este criterio, prueba con uno diferente.</string>
+    <string name="error">Error</string>
 </resources>
