--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -239,4 +239,5 @@
 
     <!--  Translations V2.4.0  -->
     <string name="there_arent_combinations_try_new_search">Il n\'y a pas de combinaisons selon ce critère, essayez un autre.</string>
+    <string name="error">Erreur</string>
 </resources>
