--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -241,4 +241,5 @@
 
     <!--  Translations V2.4.0  -->
     <string name="there_arent_combinations_try_new_search">There are no combinations under this criterion, try a different one.</string>
+    <string name="error">Error</string>
 </resources>
